--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,11 @@ repositories {
 }
 
 ext {
+    bintrayBaseUrl = 'https://api.bintray.com/maven'
+    bintrayRepository = 'maven'
+    bintrayPackage = 'serenity-maven-plugin'
+    projectDescription = 'Serenity Maven Plugin'
+
     serenityCoreVersion = '1.0.13'
     if (!project.hasProperty("bintrayUsername")) {
         bintrayUsername = 'wakaleo'
@@ -33,7 +38,6 @@ ext {
     versionCounter = new ProjectVersionCounter(isRelease: project.hasProperty("releaseBuild"))
 }
 
-name = 'serenity-maven-plugin'
 group = 'net.serenity-bdd.maven.plugins'
 version = versionCounter.currentVersion
 
