--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ buildscript {
     repositories {
         mavenLocal()
         jcenter()
+        maven() {
+            url "http://dl.bintray.com/serenity/maven/"
+        }
     }
 }
 
