--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,9 @@
         <serenity.core.version>1.0.2</serenity.core.version>
     </properties>
     <scm>
-        <url>scm:git:git@github.com:serenity-bdd/${project.name}.git</url>
-        <connection>scm:git:git@github.com:serenity-bdd/$project.name}.git</connection>
-        <developerConnection>scm:git:git@github.com:serenity-bdd/$project.name}.git</developerConnection>
+        <url>scm:git:git@github.com:serenity-bdd/serenity-maven-plugin.git</url>
+        <connection>scm:git:git@github.com:serenity-bdd/serenity-maven-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:serenity-bdd/serenity-maven-plugin.git</developerConnection>
     </scm>
     <developers>
         <developer>
@@ -119,22 +119,10 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.maven.reporting</groupId>
-            <artifactId>maven-reporting-api</artifactId>
-            <version>2.2.1</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-core</artifactId>
             <version>1.3</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven</groupId>
-            <artifactId>maven-plugin-api</artifactId>
-            <version>2.2.1</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
