Maven and Gradle builds

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.serenity-bdd.maven.plugins</groupId>
   <artifactId>serenity-maven-plugin</artifactId>
-  <version>1.0.2</version>
+  <version>1.0.3-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <build>
     <directory>${project.basedir}/build</directory>
