--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ ext {
     bintrayPackage = 'serenity-core'
     projectDescription = 'Serenity Maven Plugin'
 
-    serenityCoreVersion = '1.0.6'
+    serenityCoreVersion = '1.0.7'
     if (!project.hasProperty("bintrayUsername")) {
         bintrayUsername = 'wakaleo'
     }
@@ -65,7 +65,7 @@ task wrapper(type: Wrapper) {
 
 dependencies {
     compile "net.serenity-bdd:core:${serenityCoreVersion}"
-
+    compile "com.google.inject:guice:3.0"
     compile "org.apache.maven:maven-plugin-api:3.2.3"
     compile "org.apache.maven.reporting:maven-reporting-api:3.0"
     compile "org.apache.maven:maven-core:3.0.4"
@@ -239,4 +239,16 @@ uploadArchives {
 
 tasks.withType(JavaCompile) {
     options.compilerArgs << "-Xlint:-options"
+}
+
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs << "-Xlint:-options"
+}
+if (JavaVersion.current().isJava8Compatible()) {
+    allprojects {
+        tasks.withType(Javadoc) {
+            options.addStringOption('Xdoclint:none', '-quiet')
+        }
+    }
 }
