--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ ext {
     bintrayPackage = 'serenity-core'
     projectDescription = 'Serenity Maven Plugin'
 
-    serenityCoreVersion = '1.0.34'
+    serenityCoreVersion = '1.0.35'
     if (!project.hasProperty("bintrayUsername")) {
         bintrayUsername = 'wakaleo'
     }
@@ -58,22 +58,36 @@ task wrapper(type: Wrapper) {
     gradleVersion = '2.1'
 }
 
+configurations.all {
+    resolutionStrategy {
+        // fail fast on dependency convergence problems
+        failOnVersionConflict()
+        force  'org.codehaus.plexus:plexus-classworlds:2.5.2'
+        force 'org.codehaus.plexus:plexus-utils:3.0.20'
+        force 'org.slf4j:slf4j-api:1.7.7'
+    }
+}
+
 dependencies {
     compile "net.serenity-bdd:core:${serenityCoreVersion}"
-    compile "com.google.inject:guice:3.0"
-    compile "org.apache.maven:maven-plugin-api:3.2.3"
+    compile ("org.apache.maven:maven-core:3.2.5") {
+        exclude module:"guava"
+    }
+    compile ("org.apache.maven:maven-plugin-api:3.2.5")
     compile "org.apache.maven.reporting:maven-reporting-api:3.0"
-    compile "org.apache.maven:maven-core:3.0.4"
-    compile 'org.apache.maven.plugin-tools:maven-plugin-annotations:3.3'
+    compile("org.apache.maven.plugin-tools:maven-plugin-annotations:3.4") {
+        exclude module: "maven-artifact"
+    }
 
-    testCompile "ch.qos.logback:logback-classic:1.0.13"
-    testCompile "junit:junit:4.12"
+    testCompile "ch.qos.logback:logback-classic:1.1.2"
+    testCompile "junit:junit:4.11"
     testCompile "org.hamcrest:hamcrest-core:1.3"
     testCompile('org.mockito:mockito-all:1.10.8') {
         exclude group: "org.hamcrest"
     }
     testCompile("org.spockframework:spock-core:0.7-groovy-2.0") {
-        exclude group: "junit"
+        exclude module: "junit-dep"
+        exclude module: "groovy-all"
     }
     testCompile("com.github.goldin:spock-extensions:0.1.4") {
         exclude module: "spock-core"
