Updated core to 1.1.0

--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,16 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'org.ajoberstar:gradle-git:1.2.0'
+        classpath 'org.ajoberstar:gradle-git:0.12.0'
     }
+}
+
+apply plugin: 'org.ajoberstar.release-base'
+release {
+    grgit = Grgit.open(project.file('.'))
+    versionStrategy Strategies.FINAL
+    versionStrategy Strategies.PRE_RELEASE
+    defaultVersionStrategy Strategies.SNAPSHOT
 }
 
 apply plugin: 'java'
@@ -17,18 +25,6 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
-apply plugin: 'org.ajoberstar.release-opinion'
-
-
-
-// release {
-//     grgit = Grgit.open(project.file('.'))
-//     versionStrategy Strategies.FINAL
-//     versionStrategy Strategies.PRE_RELEASE
-//     defaultVersionStrategy Strategies.SNAPSHOT
-// }
-
-tasks.release.dependsOn 'assemble'
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
@@ -59,7 +55,7 @@ ext {
 group = 'net.serenity-bdd.maven.plugins'
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.5'
+    gradleVersion = '2.1'
 }
 
 configurations.all {
@@ -96,7 +92,7 @@ dependencies {
     testCompile("com.github.goldin:spock-extensions:0.1.4") {
         exclude module: "spock-core"
     }
-    testCompile("org.codehaus.groovy:groovy-all:2.3.10")
+    testCompile("org.codehaus.groovy:groovy-all:2.3.3")
     testCompile("org.easytesting:fest-assert:1.4")
 }
 
@@ -139,9 +135,11 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 }
 
 jar {
+    println "Publishing $project.name:$project.group:$project.version"
+
     manifest {
         attributes("Implementation-Title": "Serenity Maven Plugin",
-                   "Implementation-Version": "${serenityCoreVersion}")
+                   "Implementation-Version": project.version.toString())
     }
 }
 
@@ -149,7 +147,7 @@ artifacts {
     archives sourcesJar, javadocJar
 }
 
-/*
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
@@ -205,7 +203,6 @@ publishing {
         }
     }
 }
-*/
 
 uploadArchives {
     repositories {
@@ -242,7 +239,7 @@ uploadArchives {
                     }
                 }
             }
-            repository(id:'', url: bintrayBaseUrl + '/serenity/maven/serenity-core') {
+            repository(url: bintrayBaseUrl + '/serenity/maven/serenity-core') {
                 authentication(userName: bintrayUsername, password: bintrayApiKey)
             }
         }
