--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ ext {
     bintrayPackage = 'serenity-core'
     projectDescription = 'Serenity Maven Plugin'
 
-    serenityCoreVersion = '1.1.4'
+    serenityCoreVersion = '1.1.5'
     if (!project.hasProperty("bintrayUsername")) {
         bintrayUsername = 'wakaleo'
     }
@@ -83,7 +83,7 @@ dependencies {
     testCompile "junit:junit:4.11"
     testCompile "org.hamcrest:hamcrest-core:1.3"
     testCompile('org.mockito:mockito-all:1.10.18') {
-        exclude group: "org.hamcrest"
+        exclude group: "org.hamcrest", module:"hamcrest-all"
     }
     testCompile("org.spockframework:spock-core:0.7-groovy-2.0") {
         exclude module: "junit-dep"
