chore: updated config to build tests and subprojects in parallel

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,10 @@ repositories {
     }
 }
 
+test {
+    maxParallelForks = Runtime.runtime.availableProcessors()
+}
+
 ext {
     bintrayBaseUrl = 'https://api.bintray.com/maven'
     bintrayRepository = 'maven'
