chore: updated wrapper, and build publishing libs

--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,9 @@
-pom.xml
-test*.db
-.project
-.gradle
-.ignore 
-.settings
-target
-.idea
-.classpath
-.checkstyle
-*.log
-*.log.*
-*.iml
-*.versionsBackup
-interpolated-*.xml
-*.iws
-*.ipr
-out
-*.ignore      
 build
-bin
-thucydides-arquillian
-tools
-*.sublime-project
-*.sublime-workspace
-.hg*
+.gradle
+gradle
+gradlew
+gradlew.bat
+.idea
+lib
+target
+*.iml
