--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,13 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'org.ajoberstar:gradle-git:0.12.0'
+        classpath 'org.ajoberstar:gradle-git:1.4.0-rc.1'
     }
 }
 
 apply plugin: 'org.ajoberstar.release-base'
 release {
-    grgit = Grgit.open(project.file('.'))
+    grgit = Grgit.open()
     versionStrategy Strategies.FINAL
     versionStrategy Strategies.PRE_RELEASE
     defaultVersionStrategy Strategies.SNAPSHOT
