Removed a dependency conflict

--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,8 @@ configurations.all {
         force 'org.codehaus.plexus:plexus-classworlds:2.5.2',
             'org.codehaus.plexus:plexus-utils:3.0.20',
             'org.slf4j:slf4j-api:1.7.7',
-            'commons-collections:commons-collections:3.2.2'
+            'commons-collections:commons-collections:3.2.2',
+            'xml-apis:xml-apis:1.4.01'
     }
 }
 
