--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ ext {
     bintrayPackage = 'serenity-core'
     projectDescription = 'Serenity Maven Plugin'
 
-    serenityCoreVersion = '1.1.36'
+    serenityCoreVersion = '1.1.37-rc.2'
     if (!project.hasProperty("bintrayUsername")) {
         bintrayUsername = 'wakaleo'
     }
