--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ ext {
     projectDescription = 'Serenity Maven Plugin'
 
     mavenApiVersion = '3.2.5'
-    serenityCoreVersion = '1.3.1.rc.1'
+    serenityCoreVersion = '1.3.1-rc.1'
 
     if (!project.hasProperty("bintrayUsername")) {
         bintrayUsername = 'wakaleo'
