--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
     <dependency>
       <groupId>net.serenity-bdd</groupId>
       <artifactId>serenity-core</artifactId>
-      <version>1.5.0-SNAPSHOT</version>
+      <version>1.5.0-rc.4</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
