--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,18 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.18.1</version>
+        <configuration>
+          <includes>
+            <include>**/When*.java</include>
+            <include>**/*Test/*.java</include>
+          </includes>
+          <parallel>classes</parallel>
+          <threadCount>4</threadCount>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
   <dependencies>
